--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.svg" alt="Изображение логитапа">
+        <img src="../img/logo.svg" alt="Изображение логотипа">
     </header>
     <nav>
         <ul>
