--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/reset.css">
     <title>Магазин Выпечки</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Лучшая выпечка в городе Тверь">
 </head>
 <body>
     <header>
-        <img src="../img/logo.svg" alt="Изображение логотипа">
+        <img src="img/logo.svg" alt="Изображение логотипа">
     </header>
     <nav>
         <ul>
@@ -34,9 +34,9 @@
         </section>
         <section class="section-description">
             <div class="section-description__icon-box">
-                <img id src="../icons/icon-1.svg" alt="icon-1">
-                <img src="../icons/icon-2.svg" alt="icon-2">
-                <img src="../icons/icon-3.svg" alt="icon-3">
+                <img id src="icons/icon-1.svg" alt="icon-1">
+                <img src="icons/icon-2.svg" alt="icon-2">
+                <img src="icons/icon-3.svg" alt="icon-3">
             </div>
             <div class="section-description__text-box">
                 <h2 class="section-description__title">
